fixes filter word wrap

--- a/style/style.scss
+++ b/style/style.scss
@@ -704,6 +704,7 @@ section {
 
     .filter-wrap {
       position: relative;
+      white-space: nowrap;
     }
 
     .filter {
